tests/NormalTests/paczka1/fuzzy1/54756529.err
Error in line 6: wT7H9MWRfaH A643 1,5
Error in line 17: nFtOmbQMIH A862 62,1
Error in line 27: E0WI A862 10,4
Error in line 32: 1U1MmHDaZ4Q A172 62,5
